# nada-ai

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
examples/: README.md
examples/common/: utils.py
examples/complex_model/: README.md  complex_model.ipynb  main.py  nada-project.toml
examples/complex_model/network/: compute.py
examples/complex_model/src/: complex_model.py  main.py  my_model.py
examples/complex_model/tests/: complex_model.yaml
examples/conv_net/: 01_provide_model.py  02_run_inference.py  README.md  conv_net.ipynb  nada-project.toml  requirements.txt
examples/conv_net/src/: conv_net.py  my_nn.py
examples/conv_net/tests/: conv_net.yaml
examples/linear_regression/: README.md  config.py  linear_regression.ipynb  main.py  nada-project.toml
examples/linear_regression/network/: compute.py
examples/linear_regression/src/: linear_regression.py  main.py
examples/linear_regression/tests/: linear_regression.yaml
examples/multi_layer_perceptron/: 01_model_provider.ipynb  02_model_inference.ipynb  README.md  helpers.py  nada-project.toml  requirements.txt  tmp.json
examples/multi_layer_perceptron/src/: main.py  multi_layer_perceptron.py  my_nn.py
examples/neural_net/: README.md  config.py  main.py  nada-project.toml  neural_net.ipynb
examples/spam_detection/: 01_model_provider.ipynb  01_provide_model.py  02_model_inference.ipynb  02_run_inference.py  README.md  config.py  nada-project.toml  requirements.txt  spam_detection.ipynb
examples/time_series/: README.md  config.py  main.py  nada-project.toml  time_series.ipynb
nada_ai/: __init__.py  client.py  exceptions.py  nada_typing.py  typing.py  utils.py
nada_ai/client/: __init__.py  model_client.py
nada_ai/linear_model/: __init__.py  linear_regression.py  logistic_regression.py
nada_ai/nn/: __init__.py  activations.py  layers.py  models.py  module.py  parameter.py
nada_ai/time_series/: __init__.py  helpers.py  prophet.py
nada_ai/utils/: __init__.py
templates/: inference_template.ipynb
templates/customizable_inference/: inference_template.ipynb
templates/inference/: inference_pipeline.py  inference_runner.py  inference_template.ipynb
tests/: test_all_nada.py
tests/nada-tests/: nada-project.toml
tests/python-tests/: test_model_client.py  test_nn.py
(+56 files in other folders)
