[tool.poetry]
name = "nada-ai"
version = "0.1.1"
description = "Nada-AI is a Python library designed for AI/ML on top of Nada DSL and Nillion Network."
authors = ["Mathias Leys <mathias.leys@nillion.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
torch = "^2.3.0"
scikit-learn = "^1.4.2"
prophet = "^1.1.5"
nada-dsl = "^0.2.1"
py-nillion-client = "^0.2.1"
nada-algebra = "^0.3.4"
nillion-python-helpers = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
