[tool.poetry]
name = "nada-ai"
version = "0.3.1"
description = "Nada-AI is a Python library designed for AI/ML on top of Nada DSL and Nillion Network."
authors = ["Mathias Leys <mathias.leys@nillion.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
scikit-learn = "^1.4.2"
prophet = "^1.1.5"
nillion-python-helpers = "^0.2.3"
nada-numpy="^0.3.2"
nada-dsl="^0.4.0"
py-nillion-client="^0.4.0"
torchvision = {version="^0.18.1", optional=true}
black = {version="^24.4.2", optional=true}
isort = {version="^5.13.2", optional=true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pandas = "^2.2.2"
pylint = "^3.2.3"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
linter = ["black", "isort"]
examples = ["torchvision"]
